// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderColor": "#2E2E3F",
      "borderRadius": 5,
      "borderWidth": 1,
      "justifyContent": "center",
      "opacity": 1,
      "padding": 8,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#F1F2F4",
          "fontFamily": "Montserrat",
          "fontSize": 15,
        },
        undefined,
      ]
    }
  >
    Genre1
  </Text>
</View>
`;

exports[`renders correctly with selected prop 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  nativeID="animatedComponent"
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#0078EE",
      "borderColor": "#2E2E3F",
      "borderRadius": 5,
      "borderWidth": 1,
      "justifyContent": "center",
      "opacity": 1,
      "padding": 8,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#F1F2F4",
          "fontFamily": "Montserrat",
          "fontSize": 15,
        },
        Object {
          "color": "#F1F2F4",
        },
      ]
    }
  >
    Genre1
  </Text>
</View>
`;
